ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.7.8
    • Affects Version/s: 2.7.7
    • Component/s: Shell
    • ALL
    • Hide
      var ops=[{ op: "insert", ns: "foo", doc: { foo: { "#VARIABLE": "foo" }}}];
      for ( var x = 1; x <= 1; x++) { res = benchRun(
          {seconds : 1,ops : ops}
      ); print( "queries/sec: " + res.query ); }
      
      Show
      var ops=[{ op: "insert", ns: "foo", doc: { foo: { "#VARIABLE": "foo" }}}]; for ( var x = 1; x <= 1; x++) { res = benchRun( {seconds : 1,ops : ops} ); print( "queries/sec: " + res.query ); }
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When executing a benchrun() command with a #VARIABLE template that uses a variable not defined with a let operation an exception occurs and kills the shell.

      2014-10-08T16:37:55.326-0500 I -        Assertion failure !e.eoo() src/mongo/bson/bsonobjbuilder.h 128
      2014-10-08T16:37:55.331-0500 I -
       0x1002a1c94 0x100243836 0x100225ebe 0x1000359a5 0x1001935a4 0x100198159 0x100194c1b 0x10019413c 0x1001939e8 0x1001ef1f1 0x1001ea639 0x1001e4128 0x1001f7a72 0x1001f79d5 0x1001f796f 0x1001f791c 0x1002f46b4 0x7fff86700899 0x7fff8670072a 0x7fff86704fc9
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"100000000","o":"2A1C94"},{"b":"100000000","o":"243836"},{"b":"100000000","o":"225EBE"},{"b":"100000000","o":"359A5"},{"b":"100000000","o":"1935A4"},{"b":"100000000","o":"198159"},{"b":"100000000","o":"194C1B"},{"b":"100000000","o":"19413C"},{"b":"100000000","o":"1939E8"},{"b":"100000000","o":"1EF1F1"},{"b":"100000000","o":"1EA639"},{"b":"100000000","o":"1E4128"},{"b":"100000000","o":"1F7A72"},{"b":"100000000","o":"1F79D5"},{"b":"100000000","o":"1F796F"},{"b":"100000000","o":"1F791C"},{"b":"100000000","o":"2F46B4"},{"b":"7FFF866FF000","o":"1899"},{"b":"7FFF866FF000","o":"172A"},{"b":"7FFF866FF000","o":"5FC9"}],"processInfo":{ "mongodbVersion" : "2.7.8-pre-", "gitVersion" : "225d7b1ecc94cf1b85d34055d4542ad31736ec1e", "uname" : { "sysname" : "Darwin", "release" : "13.4.0", "version" : "Darwin Kernel Version 13.4.0: Sun Aug 17 19:50:11 PDT 2014; root:xnu-2422.115.4~1/RELEASE_X86_64", "machine" : "x86_64" }, "somap" : [ { "path" : "/Users/brian/Development/MongoDB/mongo/./mongo", "machType" : 2, "b" : "100000000", "buildId" : "6B6E9EFE955E3AC0A1CD4D22B8D116EA" }, { "path" : "/usr/lib/libSystem.B.dylib", "machType" : 6, "b" : "7FFF8548C000", "buildId" : "E303F2F8A8CF3DF384B3F2D0EE41CCF6" }, { "path" : "/usr/lib/libstdc++.6.dylib", "machType" : 6, "b" : "7FFF8594A000", "buildId" : "0241E6A4136833BE950BD0A175C41F54" }, { "path" : "/usr/lib/system/libcache.dylib", "machType" : 6, "b" : "7FFF8422F000", "buildId" : "8C1EFC4F3F513DE9A973360B461F3D65" }, { "path" : "/usr/lib/system/libcommonCrypto.dylib", "machType" : 6, "b" : "7FFF8FEA1000", "buildId" : "79B8E80FE59633028243EC479B9546CA" }, { "path" : "/usr/lib/system/libcompiler_rt.dylib", "machType" : 6, "b" : "7FFF853CA000", "buildId" : "2A8900040A783E339AC5A7D63BD4F879" }, { "path" : "/usr/lib/system/libcopyfile.dylib", "machType" : 6, "b" : "7FFF874FC000", "buildId" : "CF29DFF605893590834C82E2316612E8" }, { "path" : "/usr/lib/system/libcorecrypto.dylib", "machType" : 6, "b" : "7FFF85EA6000", "buildId" : "F3973C2814B63006BB2B00DD7F09ABC7" }, { "path" : "/usr/lib/system/libdispatch.dylib", "machType" : 6, "b" : "7FFF8694D000", "buildId" : "C4E4A18D3C3B3C9C8709A4270D998DE7" }, { "path" : "/usr/lib/system/libdyld.dylib", "machType" : 6, "b" : "7FFF8DA62000", "buildId" : "7C9EC3B7DDE333FF953F4067C743951D" }, { "path" : "/usr/lib/system/libkeymgr.dylib", "machType" : 6, "b" : "7FFF86767000", "buildId" : "D7045F25BFA43840847DAF95DF8B6CCA" }, { "path" : "/usr/lib/system/liblaunch.dylib", "machType" : 6, "b" : "7FFF87468000", "buildId" : "A40A0C7B321639B48AE0B5D3BAF1DA8A" }, { "path" : "/usr/lib/system/libmacho.dylib", "machType" : 6, "b" : "7FFF8FE91000", "buildId" : "B2BE3C25CF1F309BAB991F0B54621445" }, { "path" : "/usr/lib/system/libquarantine.dylib", "machType" : 6, "b" : "7FFF90189000", "buildId" : "973BE51D6465392F9099D4AB21BF0D25" }, { "path" : "/usr/lib/system/libremovefile.dylib", "machType" : 6, "b" : "7FFF8EBC3000", "buildId" : "26266E3FFDDC3CFCB27F78B49BDC9BDC" }, { "path" : "/usr/lib/system/libsystem_asl.dylib", "machType" : 6, "b" : "7FFF83D9B000", "buildId" : "B983CA60F418317BB14248A6376564FC" }, { "path" : "/usr/lib/system/libsystem_blocks.dylib", "machType" : 6, "b" : "7FFF8B947000", "buildId" : "FB856CD12AEA39078E9B1E54B6827F82" }, { "path" : "/usr/lib/system/libsystem_c.dylib", "machType" : 6, "b" : "7FFF8E868000", "buildId" : "6FD3A4004BB23B95B90CBE6E9D0D78FA" }, { "path" : "/usr/lib/system/libsystem_configuration.dylib", "machType" : 6, "b" : "7FFF86764000", "buildId" : "4998CB6A9D54390A9F575D1AC53C135C" }, { "path" : "/usr/lib/system/libsystem_dnssd.dylib", "machType" : 6, "b" : "7FFF8C036000", "buildId" : "17B03FFD92C532829981EBB28B456207" }, { "path" : "/usr/lib/system/libsystem_info.dylib", "machType" : 6, "b" : "7FFF8668F000", "buildId" : "395D8CD6616A3BD3A195C6D68EB9AB22" }, { "path" : "/usr/lib/system/libsystem_kernel.dylib", "machType" : 6, "b" : "7FFF8B10A000", "buildId" : "9EDE872E2A9E3A788E1DAB790794A098" }, { "path" : "/usr/lib/system/libsystem_m.dylib", "machType" : 6, "b" : "7FFF88777000", "buildId" : "9D96AACD58703A5CB8497F9C0F6EBB09" }, { "path" : "/usr/lib/system/libsystem_malloc.dylib", "machType" : 6, "b" : "7FFF871DD000", "buildId" : "A695B4E438E9332EA77229D31E3F1385" }, { "path" : "/usr/lib/system/libsystem_network.dylib", "machType" : 6, "b" : "7FFF8E66B000", "buildId" : "A499D688916537768C8EC018897B5B13" }, { "path" : "/usr/lib/system/libsystem_notify.dylib", "machType" : 6, "b" : "7FFF85499000", "buildId" : "9B34B4FEF5AD3F09A5F046AFF3571323" }, { "path" : "/usr/lib/system/libsystem_platform.dylib", "machType" : 6, "b" : "7FFF8F05C000", "buildId" : "3C3D3DA832B9324398ECD89B9A1670B3" }, { "path" : "/usr/lib/system/libsystem_pthread.dylib", "machType" : 6, "b" : "7FFF866FF000", "buildId" : "9DA50FD0D9AC3051AD4BBA0D745BC49C" }, { "path" : "/usr/lib/system/libsystem_sandbox.dylib", "machType" : 6, "b" : "7FFF8C204000", "buildId" : "0D0B13EA6B7A3AC8BE60B548543BEB77" }, { "path" : "/usr/lib/system/libsystem_stats.dylib", "machType" : 6, "b" : "7FFF873BF000", "buildId" : "4E51D5B092A03D0DB90E495A1ED3E391" }, { "path" : "/usr/lib/system/libunc.dylib", "machType" : 6, "b" : "7FFF83F76000", "buildId" : "C3737C9AC06F310CB78C7D8D882A35DE" }, { "path" : "/usr/lib/system/libunwind.dylib", "machType" : 6, "b" : "7FFF8ED02000", "buildId" : "95D4D11833683474989D271DE18C8365" }, { "path" : "/usr/lib/system/libxpc.dylib", "machType" : 6, "b" : "7FFF86577000", "buildId" : "AB40CD57F4543FD4B41563B3C0D5C624" }, { "path" : "/usr/lib/libobjc.A.dylib", "machType" : 6, "b" : "7FFF8FF0A000", "buildId" : "F21C57427B9C31F1BBAE1717BC6C2F1B" }, { "path" : "/usr/lib/libauto.dylib", "machType" : 6, "b" : "7FFF8664A000", "buildId" : "F45C36E8B6063886B5B1B6745E757CA8" }, { "path" : "/usr/lib/libc++abi.dylib", "machType" : 6, "b" : "7FFF868F9000", "buildId" : "21A807D367323455B77F743E9F916DF0" }, { "path" : "/usr/lib/libc++.1.dylib", "machType" : 6, "b" : "7FFF8984F000", "buildId" : "2CB96D101E3E39B1B90DC56C3818321E" }, { "path" : "/usr/lib/libDiagnosticMessagesClient.dylib", "machType" : 6, "b" : "7FFF883CD000", "buildId" : "4CDB0F7BC0AF3424BC39495696F0DB1E" } ] }}
       mongo(_ZN5mongo15printStackTraceERSo+0x34) [0x1002a1c94]
       mongo(_ZN5mongo10logContextEPKc+0xC6) [0x100243836]
       mongo(_ZN5mongo12verifyFailedEPKcS1_j+0x13E) [0x100225ebe]
       mongo(_ZN5mongo14BSONObjBuilder8appendAsERKNS_11BSONElementERKNS_10StringDataE+0x55) [0x1000359a5]
       mongo(_ZN5mongo21BsonTemplateEvaluator12evalVariableEPS0_PKcRKNS_7BSONObjERNS_14BSONObjBuilderE+0x104) [0x1001935a4]
       mongo(_ZN5boost6detail8function17function_invoker4IPFN5mongo21BsonTemplateEvaluator6StatusEPS4_PKcRKNS3_7BSONObjERNS3_14BSONObjBuilderEES5_S6_S8_SB_SD_E6invokeERNS1_15function_bufferES6_S8_SB_SD_+0x49) [0x100198159]
       mongo(_ZNK5boost9function4IN5mongo21BsonTemplateEvaluator6StatusEPS2_PKcRKNS1_7BSONObjERNS1_14BSONObjBuilderEEclES4_S6_S9_SB_+0x9B) [0x100194c1b]
       mongo(_ZN5mongo21BsonTemplateEvaluator9_evalElemENS_11BSONElementERNS_14BSONObjBuilderE+0x71C) [0x10019413c]
       mongo(_ZN5mongo21BsonTemplateEvaluator8evaluateERKNS_7BSONObjERNS_14BSONObjBuilderE+0xB8) [0x1001939e8]
       mongo(_ZN5mongoL8fixQueryERKNS_7BSONObjERNS_21BsonTemplateEvaluatorE+0x71) [0x1001ef1f1]
       mongo(_ZN5mongo14BenchRunWorker24generateLoadOnConnectionEPNS_12DBClientBaseE+0x6379) [0x1001ea639]
       mongo(_ZN5mongo14BenchRunWorker3runEv+0x4A8) [0x1001e4128]
       mongo(_ZNK5boost4_mfi3mf0IvN5mongo14BenchRunWorkerEEclEPS3_+0x72) [0x1001f7a72]
       mongo(_ZN5boost3_bi5list1INS0_5valueIPN5mongo14BenchRunWorkerEEEEclINS_4_mfi3mf0IvS4_EENS0_5list0EEEvNS0_4typeIvEERT_RT0_i+0x55) [0x1001f79d5]
       mongo(_ZN5boost3_bi6bind_tIvNS_4_mfi3mf0IvN5mongo14BenchRunWorkerEEENS0_5list1INS0_5valueIPS5_EEEEEclEv+0x3F) [0x1001f796f]
       mongo(_ZN5boost6detail11thread_dataINS_3_bi6bind_tIvNS_4_mfi3mf0IvN5mongo14BenchRunWorkerEEENS2_5list1INS2_5valueIPS7_EEEEEEE3runEv+0x1C) [0x1001f791c]
       mongo(_ZN5boost12_GLOBAL__N_112thread_proxyEPv+0x94) [0x1002f46b4]
       libsystem_pthread.dylib(_pthread_body+0x8A) [0x7fff86700899]
       libsystem_pthread.dylib(_pthread_struct_init+0x0) [0x7fff8670072a]
       libsystem_pthread.dylib(thread_start+0xD) [0x7fff86704fc9]
      -----  END BACKTRACE  -----
      2014-10-08T16:37:55.332-0500 I -
      
      ***aborting after verify() failure as this is a debug/test build
      
      
      2014-10-08T16:37:55.337-0500 F -        Got signal: 6 (Abort trap: 6).
      
       0x1002a1c94 0x1002a1795 0x1002a13d3 0x7fff8f05f5aa 0x206000fc9408 0x7fff8e8c4b1a 0x100226002 0x1000359a5 0x1001935a4 0x100198159 0x100194c1b 0x10019413c 0x1001939e8 0x1001ef1f1 0x1001ea639 0x1001e4128 0x1001f7a72 0x1001f79d5 0x1001f796f 0x1001f791c 0x1002f46b4 0x7fff86700899 0x7fff8670072a 0x7fff86704fc9
      ----- BEGIN BACKTRACE -----
      {"backtrace":[{"b":"100000000","o":"2A1C94"},{"b":"100000000","o":"2A1795"},{"b":"100000000","o":"2A13D3"},{"b":"7FFF8F05C000","o":"35AA"},{"b":"0","o":"206000FC9408"},{"b":"7FFF8E868000","o":"5CB1A"},{"b":"100000000","o":"226002"},{"b":"100000000","o":"359A5"},{"b":"100000000","o":"1935A4"},{"b":"100000000","o":"198159"},{"b":"100000000","o":"194C1B"},{"b":"100000000","o":"19413C"},{"b":"100000000","o":"1939E8"},{"b":"100000000","o":"1EF1F1"},{"b":"100000000","o":"1EA639"},{"b":"100000000","o":"1E4128"},{"b":"100000000","o":"1F7A72"},{"b":"100000000","o":"1F79D5"},{"b":"100000000","o":"1F796F"},{"b":"100000000","o":"1F791C"},{"b":"100000000","o":"2F46B4"},{"b":"7FFF866FF000","o":"1899"},{"b":"7FFF866FF000","o":"172A"},{"b":"7FFF866FF000","o":"5FC9"}],"processInfo":{ "mongodbVersion" : "2.7.8-pre-", "gitVersion" : "225d7b1ecc94cf1b85d34055d4542ad31736ec1e", "uname" : { "sysname" : "Darwin", "release" : "13.4.0", "version" : "Darwin Kernel Version 13.4.0: Sun Aug 17 19:50:11 PDT 2014; root:xnu-2422.115.4~1/RELEASE_X86_64", "machine" : "x86_64" }, "somap" : [ { "path" : "/Users/brian/Development/MongoDB/mongo/./mongo", "machType" : 2, "b" : "100000000", "buildId" : "6B6E9EFE955E3AC0A1CD4D22B8D116EA" }, { "path" : "/usr/lib/libSystem.B.dylib", "machType" : 6, "b" : "7FFF8548C000", "buildId" : "E303F2F8A8CF3DF384B3F2D0EE41CCF6" }, { "path" : "/usr/lib/libstdc++.6.dylib", "machType" : 6, "b" : "7FFF8594A000", "buildId" : "0241E6A4136833BE950BD0A175C41F54" }, { "path" : "/usr/lib/system/libcache.dylib", "machType" : 6, "b" : "7FFF8422F000", "buildId" : "8C1EFC4F3F513DE9A973360B461F3D65" }, { "path" : "/usr/lib/system/libcommonCrypto.dylib", "machType" : 6, "b" : "7FFF8FEA1000", "buildId" : "79B8E80FE59633028243EC479B9546CA" }, { "path" : "/usr/lib/system/libcompiler_rt.dylib", "machType" : 6, "b" : "7FFF853CA000", "buildId" : "2A8900040A783E339AC5A7D63BD4F879" }, { "path" : "/usr/lib/system/libcopyfile.dylib", "machType" : 6, "b" : "7FFF874FC000", "buildId" : "CF29DFF605893590834C82E2316612E8" }, { "path" : "/usr/lib/system/libcorecrypto.dylib", "machType" : 6, "b" : "7FFF85EA6000", "buildId" : "F3973C2814B63006BB2B00DD7F09ABC7" }, { "path" : "/usr/lib/system/libdispatch.dylib", "machType" : 6, "b" : "7FFF8694D000", "buildId" : "C4E4A18D3C3B3C9C8709A4270D998DE7" }, { "path" : "/usr/lib/system/libdyld.dylib", "machType" : 6, "b" : "7FFF8DA62000", "buildId" : "7C9EC3B7DDE333FF953F4067C743951D" }, { "path" : "/usr/lib/system/libkeymgr.dylib", "machType" : 6, "b" : "7FFF86767000", "buildId" : "D7045F25BFA43840847DAF95DF8B6CCA" }, { "path" : "/usr/lib/system/liblaunch.dylib", "machType" : 6, "b" : "7FFF87468000", "buildId" : "A40A0C7B321639B48AE0B5D3BAF1DA8A" }, { "path" : "/usr/lib/system/libmacho.dylib", "machType" : 6, "b" : "7FFF8FE91000", "buildId" : "B2BE3C25CF1F309BAB991F0B54621445" }, { "path" : "/usr/lib/system/libquarantine.dylib", "machType" : 6, "b" : "7FFF90189000", "buildId" : "973BE51D6465392F9099D4AB21BF0D25" }, { "path" : "/usr/lib/system/libremovefile.dylib", "machType" : 6, "b" : "7FFF8EBC3000", "buildId" : "26266E3FFDDC3CFCB27F78B49BDC9BDC" }, { "path" : "/usr/lib/system/libsystem_asl.dylib", "machType" : 6, "b" : "7FFF83D9B000", "buildId" : "B983CA60F418317BB14248A6376564FC" }, { "path" : "/usr/lib/system/libsystem_blocks.dylib", "machType" : 6, "b" : "7FFF8B947000", "buildId" : "FB856CD12AEA39078E9B1E54B6827F82" }, { "path" : "/usr/lib/system/libsystem_c.dylib", "machType" : 6, "b" : "7FFF8E868000", "buildId" : "6FD3A4004BB23B95B90CBE6E9D0D78FA" }, { "path" : "/usr/lib/system/libsystem_configuration.dylib", "machType" : 6, "b" : "7FFF86764000", "buildId" : "4998CB6A9D54390A9F575D1AC53C135C" }, { "path" : "/usr/lib/system/libsystem_dnssd.dylib", "machType" : 6, "b" : "7FFF8C036000", "buildId" : "17B03FFD92C532829981EBB28B456207" }, { "path" : "/usr/lib/system/libsystem_info.dylib", "machType" : 6, "b" : "7FFF8668F000", "buildId" : "395D8CD6616A3BD3A195C6D68EB9AB22" }, { "path" : "/usr/lib/system/libsystem_kernel.dylib", "machType" : 6, "b" : "7FFF8B10A000", "buildId" : "9EDE872E2A9E3A788E1DAB790794A098" }, { "path" : "/usr/lib/system/libsystem_m.dylib", "machType" : 6, "b" : "7FFF88777000", "buildId" : "9D96AACD58703A5CB8497F9C0F6EBB09" }, { "path" : "/usr/lib/system/libsystem_malloc.dylib", "machType" : 6, "b" : "7FFF871DD000", "buildId" : "A695B4E438E9332EA77229D31E3F1385" }, { "path" : "/usr/lib/system/libsystem_network.dylib", "machType" : 6, "b" : "7FFF8E66B000", "buildId" : "A499D688916537768C8EC018897B5B13" }, { "path" : "/usr/lib/system/libsystem_notify.dylib", "machType" : 6, "b" : "7FFF85499000", "buildId" : "9B34B4FEF5AD3F09A5F046AFF3571323" }, { "path" : "/usr/lib/system/libsystem_platform.dylib", "machType" : 6, "b" : "7FFF8F05C000", "buildId" : "3C3D3DA832B9324398ECD89B9A1670B3" }, { "path" : "/usr/lib/system/libsystem_pthread.dylib", "machType" : 6, "b" : "7FFF866FF000", "buildId" : "9DA50FD0D9AC3051AD4BBA0D745BC49C" }, { "path" : "/usr/lib/system/libsystem_sandbox.dylib", "machType" : 6, "b" : "7FFF8C204000", "buildId" : "0D0B13EA6B7A3AC8BE60B548543BEB77" }, { "path" : "/usr/lib/system/libsystem_stats.dylib", "machType" : 6, "b" : "7FFF873BF000", "buildId" : "4E51D5B092A03D0DB90E495A1ED3E391" }, { "path" : "/usr/lib/system/libunc.dylib", "machType" : 6, "b" : "7FFF83F76000", "buildId" : "C3737C9AC06F310CB78C7D8D882A35DE" }, { "path" : "/usr/lib/system/libunwind.dylib", "machType" : 6, "b" : "7FFF8ED02000", "buildId" : "95D4D11833683474989D271DE18C8365" }, { "path" : "/usr/lib/system/libxpc.dylib", "machType" : 6, "b" : "7FFF86577000", "buildId" : "AB40CD57F4543FD4B41563B3C0D5C624" }, { "path" : "/usr/lib/libobjc.A.dylib", "machType" : 6, "b" : "7FFF8FF0A000", "buildId" : "F21C57427B9C31F1BBAE1717BC6C2F1B" }, { "path" : "/usr/lib/libauto.dylib", "machType" : 6, "b" : "7FFF8664A000", "buildId" : "F45C36E8B6063886B5B1B6745E757CA8" }, { "path" : "/usr/lib/libc++abi.dylib", "machType" : 6, "b" : "7FFF868F9000", "buildId" : "21A807D367323455B77F743E9F916DF0" }, { "path" : "/usr/lib/libc++.1.dylib", "machType" : 6, "b" : "7FFF8984F000", "buildId" : "2CB96D101E3E39B1B90DC56C3818321E" }, { "path" : "/usr/lib/libDiagnosticMessagesClient.dylib", "machType" : 6, "b" : "7FFF883CD000", "buildId" : "4CDB0F7BC0AF3424BC39495696F0DB1E" } ] }}
       mongo(_ZN5mongo15printStackTraceERSo+0x34) [0x1002a1c94]
       mongo(_ZN5mongo12_GLOBAL__N_123printSignalAndBacktraceEi+0x75) [0x1002a1795]
       mongo(_ZN5mongo12_GLOBAL__N_110abruptQuitEi+0x23) [0x1002a13d3]
       libsystem_platform.dylib(_sigtramp+0x1A) [0x7fff8f05f5aa]
       ??? [0x206000fc9408]
       libsystem_c.dylib(abort+0x7D) [0x7fff8e8c4b1a]
       mongo(_ZN5mongo12verifyFailedEPKcS1_j+0x282) [0x100226002]
       mongo(_ZN5mongo14BSONObjBuilder8appendAsERKNS_11BSONElementERKNS_10StringDataE+0x55) [0x1000359a5]
       mongo(_ZN5mongo21BsonTemplateEvaluator12evalVariableEPS0_PKcRKNS_7BSONObjERNS_14BSONObjBuilderE+0x104) [0x1001935a4]
       mongo(_ZN5boost6detail8function17function_invoker4IPFN5mongo21BsonTemplateEvaluator6StatusEPS4_PKcRKNS3_7BSONObjERNS3_14BSONObjBuilderEES5_S6_S8_SB_SD_E6invokeERNS1_15function_bufferES6_S8_SB_SD_+0x49) [0x100198159]
       mongo(_ZNK5boost9function4IN5mongo21BsonTemplateEvaluator6StatusEPS2_PKcRKNS1_7BSONObjERNS1_14BSONObjBuilderEEclES4_S6_S9_SB_+0x9B) [0x100194c1b]
       mongo(_ZN5mongo21BsonTemplateEvaluator9_evalElemENS_11BSONElementERNS_14BSONObjBuilderE+0x71C) [0x10019413c]
       mongo(_ZN5mongo21BsonTemplateEvaluator8evaluateERKNS_7BSONObjERNS_14BSONObjBuilderE+0xB8) [0x1001939e8]
       mongo(_ZN5mongoL8fixQueryERKNS_7BSONObjERNS_21BsonTemplateEvaluatorE+0x71) [0x1001ef1f1]
       mongo(_ZN5mongo14BenchRunWorker24generateLoadOnConnectionEPNS_12DBClientBaseE+0x6379) [0x1001ea639]
       mongo(_ZN5mongo14BenchRunWorker3runEv+0x4A8) [0x1001e4128]
       mongo(_ZNK5boost4_mfi3mf0IvN5mongo14BenchRunWorkerEEclEPS3_+0x72) [0x1001f7a72]
       mongo(_ZN5boost3_bi5list1INS0_5valueIPN5mongo14BenchRunWorkerEEEEclINS_4_mfi3mf0IvS4_EENS0_5list0EEEvNS0_4typeIvEERT_RT0_i+0x55) [0x1001f79d5]
       mongo(_ZN5boost3_bi6bind_tIvNS_4_mfi3mf0IvN5mongo14BenchRunWorkerEEENS0_5list1INS0_5valueIPS5_EEEEEclEv+0x3F) [0x1001f796f]
       mongo(_ZN5boost6detail11thread_dataINS_3_bi6bind_tIvNS_4_mfi3mf0IvN5mongo14BenchRunWorkerEEENS2_5list1INS2_5valueIPS7_EEEEEEE3runEv+0x1C) [0x1001f791c]
       mongo(_ZN5boost12_GLOBAL__N_112thread_proxyEPv+0x94) [0x1002f46b4]
       libsystem_pthread.dylib(_pthread_body+0x8A) [0x7fff86700899]
       libsystem_pthread.dylib(_pthread_struct_init+0x0) [0x7fff8670072a]
       libsystem_pthread.dylib(thread_start+0xD) [0x7fff86704fc9]
      -----  END BACKTRACE  -----
      

            Assignee:
            Matt Kangas (Inactive)
            Reporter:
            Brian Towles (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: