SERVER-15574 Exception in benchrun when a #VARIABLE is used without a corrosponding let op